fixed portfolio alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,19 +142,23 @@ aside {
 	padding bottom: 100px;
 }
 
+.portfolio {
+	margin-right: -20px;
+	margin-left: -10px;
+}
 .portfolio_pic {
 	width: 280px;
 	height: 200px;
-	/*padding-right: 20px;*/
 }
 
-ul.portfolio li{
+.portfolio_item{
 	display: inline-block;
+	text-align: center;
 	width: 49%;
 }
-
 .portfolio_item_title {
 	width: 280px;
+	/*width: 260px;*/
 	height: 50px;
 	background: #4aaaa5;
 	font-family: 'Georgia', Times, Times New Roman, serif;
@@ -167,6 +171,7 @@ ul.portfolio li{
 	text-align: center;
 	font-size: 22px;
 	padding-top: 8px;
+	display: inline-block;
 }
 
 #contact_form {
